# mongosq

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json
frontend/: package-lock.json  package.json  postcss.config.js  quasar.config.ts  tailwind.config.js
frontend/src/boot/: pinia.ts
frontend/src/css/: app.scss
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: CollectionsPage.vue  DatabasesPage.vue  DocumentsPage.vue  IndexPage.vue  LoginPage.vue  SettingsPage.vue
frontend/src/router/: index.ts  routes.ts
frontend/src/services/: api.ts  notification.ts
frontend/src/stores/: auth.ts  database.ts
server/: .env  .env.example  README.md  main.py  pyproject.toml
server/.trae/documents/: mongo_document_operations_plan.md
server/src/config/: security.py  settings.py
server/src/db/: connection.py  manager.py
server/src/server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/tests/: test_api.py  test_connection.py  test_manager.py
