[project]
name = "server"
version = "0.1.0"
description = "MongoDB database management service with FastAPI interface"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "pymongo>=4.7.0",
    "pydantic-settings>=2.1.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
]
